objects/ContractExternalReference__c.object
<CustomObject>
    <description>Stores the additional information related to Contracts</description>
    <fields>
        <fullName>ClientReference__c</fullName>
        <label>Client Reference</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>External References</relationshipLabel>
        <relationshipName>ContractExternalReferences</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OtherType__c</fullName>
        <label>Other Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SystemReference__c</fullName>
        <label>System Reference</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Legacy Contract Type</fullName>
                </value>
                <value>
                    <fullName>Additional Services</fullName>
                </value>
                <value>
                    <fullName>Device License Count</fullName>
                </value>
                <value>
                    <fullName>Training Voucher</fullName>
                </value>
                <value>
                    <fullName>System Information</fullName>
                </value>
                <value>
                    <fullName>Software Licensing</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Contract External Reference</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Contract External Reference Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract External References</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>